# HuaLi_garbage_system

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Optimization.md  README.md  analyze_dataset.py  convert_coco.py  convert_coco2yolo_separate.py  create_smoke_dataset.py  detect_fire_smoke.py  detect_video.py  export_onnx.py  garbage_system.db  garbage_system.db-shm  garbage_system.db-wal  merge_datasets.py  package-lock.json  pyproject.toml  requirements.txt  start_queue.bat  test.md  train_fire_smoke.py  train_fire_smoke_cloud.ipynb  train_garbage.py  train_yolo.py
.playwright-cli/: page-2026-04-09T05-37-27-922Z.yml
app/: __init__.py  alert_cooldown.py  app.py  bootstrap.py  celery_app.py  config.py  constants.py  database.py  db_models.py  dependencies.py  detector.py  main.py  schemas.py  tasks.py  test_video.py  utils.py
benchmarks/: rust_call_path_benchmark.py
dataset_fire/: dataset_fire.yaml
dataset_smoke_5images_new/: dataset_smoke_5images.yaml  labels.cache
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: lib.rs  main.rs
scripts/: download_rust_wheel.py
tests/: test_alarm.py  test_alert_policy.py  test_api_detection.py  test_concurrency.py  test_detection_engine.py  test_detection_service.py  test_inference_service.py  test_record_service.py  test_rendering_service.py  test_rust_bridge.py  test_scene_service.py  test_statistics_service.py  test_stream_interfaces.py  test_tracker.py  test_validators.py  test_video_cooldown.py  test_video_pipeline_integration.py  test_video_task_integration.py
tools/: prelabel_garbage_bin.py  (+1 more)
(+121 files in other folders)
