[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["rust/target", ".venv", ".venv311", "venv", "logs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10"
plugins = []
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
files = ["app", "tests"]
exclude = ["rust/target", ".venv", ".venv311", "venv", "logs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
