[package]
name = "huali_garbage_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "huali_garbage_core"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "huali_garbage_server"
path = "src/main.rs"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
pyo3 = { version = "0.22", optional = true, features = ["extension-module", "abi3-py310"] }
